[project]
name = "pi-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "textual>=8.2.8",
    "uvicorn>=0.49.0",
]

[dependency-groups]
server = [
    "fastapi>=0.139.0",
    "psutil>=7.2.2",
    "uvicorn>=0.49.0",
]
